--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -53,7 +53,8 @@
         background: no-repeat top / cover url("images/4Q4A2985.jpg");
       }
       #day-family-nav {
-        background: no-repeat center/cover url("images/day_family/FANSON-76.jpg");
+        background: no-repeat center/cover
+          url("images/day_family/FANSON-76.jpg");
       }
       #special-thanks {
         background: no-repeat center/cover url("images/4Q4A2317.jpg");
@@ -101,6 +102,8 @@
         position: relative;
         background-color: #6a0000;
         margin: 5vh 0;
+        border-radius: 10px;
+        overflow: hidden;
       }
       .thumbs {
         display: flex;
@@ -180,6 +183,11 @@
         font-size: 2rem;
         color: white;
         padding: 3rem;
+      }
+      @media (max-width: 1279px) {
+        .section-bg {
+          border-radius: 0;
+        }
       }
     </style>
 
