--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="photoswipe.css" />
 
     <style>
+      :root {
+        --rounded: 10px;
+        --primary-color: #6A0000; 
+        --font-size: 16px;
+        --spacing: 10px;
+      }
       #main-container {
         height: 100vh;
         width: 100vw;
@@ -79,7 +85,7 @@
         padding: 1.5rem;
         backdrop-filter: blur(4px);
         color: white;
-        border-radius: 10px;
+        border-radius: var(--rounded);
       }
       #my-gallery {
         display: flex;
@@ -102,7 +108,7 @@
         position: relative;
         background-color: #6a0000;
         margin: 5vh 0;
-        border-radius: 10px;
+        border-radius: var(--rounded);
         overflow: hidden;
       }
       .thumbs {
@@ -116,6 +122,8 @@
         backdrop-filter: blur(4px);
         position: absolute;
         bottom: 0;
+        border-bottom-left-radius: var(--rounded);
+        border-bottom-right-radius: var(--rounded);
         a {
           overflow: hidden;
           min-width: 150px;
